--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
